iproute2 (5.10.0-4jens11) tarent; urgency=medium

  * Cache fragment information for IP packets

 -- Thorsten Glaser <t.glaser@tarent.de>  Wed, 13 Jul 2022 23:15:40 +0200

iproute2 (5.10.0-4jens10) tarent; urgency=medium

  * Rebuild in bullseye

 -- Thorsten Glaser <t.glaser@tarent.de>  Thu, 07 Jul 2022 20:34:58 +0200

iproute2 (5.10.0-4~jens+10) tarent; urgency=medium

  * jhtb: drop option “Hysteresis mode, less CPU load, less accurate”
  * add Linux 5.16 compatibility and catch up with upstream’s diffs
  * introduce “make versions” pseudo-target
  * make “make show-hz” (with/without version) more robust
  * handle API+ABI break in the so-called “stable” Linux kernel
  * check for strerrordesc_np to allow building with latest glibc
  * fix warnings from newer GCC
  * revert reporting flow ID
  * sch_jens reporting: for IPv4/IPv6 packets also report the nextheader
    (protocol) and if it’s TCP or UDP, their port numbers; this bumps the
    TC_JENS_RELAY_SOJOURN revision number (together with flow ID removal)
    ‣ fragmented packets are not yet supported except the first fragment
  * fix small issues in the LKM wrapper Makefile
  * work around *another* “stable” kernel bug (cf. #1013299)
  * add kernel < 5.1 bug wrt. locally originated packets documentation

 -- Thorsten Glaser <t.glaser@tarent.de>  Mon, 04 Jul 2022 17:10:24 +0200

iproute2 (5.10.0-4~jens+9) tarent; urgency=medium

  * Report flow ID for packets

 -- Thorsten Glaser <t.glaser@tarent.de>  Wed, 09 Mar 2022 16:19:26 +0100

iproute2 (5.10.0-4~jens+8) tarent; urgency=medium

  * Change subbufs record size from 16 to 64, bump enum values
  * Amend TC_JENS_RELAY_SOJOURN with IP address (and version) if present
    and (full) skb data size
  * /usr/share/doc/iproute2/README.Debian: LKM unloading on upgrades note

 -- Thorsten Glaser <t.glaser@tarent.de>  Fri, 18 Feb 2022 18:26:21 +0100

iproute2 (5.10.0-4~jens+7) tarent; urgency=medium

  * Add nouseport option to sch_jens
