@@ -1,8 +1,9 @@
 iproute2 (5.10.0-4jens11) tarent; urgency=medium
 
   * Cache fragment information for IP packets
+  * For nōn-first fragments that follow the first, use cached info
 
- -- Thorsten Glaser <t.glaser@tarent.de>  Wed, 13 Jul 2022 23:15:40 +0200
+ -- Thorsten Glaser <t.glaser@tarent.de>  Sun, 31 Jul 2022 22:29:45 +0200
 
 iproute2 (5.10.0-4jens10) tarent; urgency=medium
 
